# moviesoeiro

./: .gitignore  Makefile  Makefile:Zone.Identifier  README.md  activate.sh  deploy_docs.sh  deploy_docs.sh:Zone.Identifier  index.html  manage.py  mkdocs.yml  pyproject.toml  sitemap.xml
core/: asgi.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
docs/: index.md  movie.md  movie.md:Zone.Identifier
movie/: index.html
movies/: admin.py  models.py  urls.py  views.py
movies/migrations/: 0001_initial.py
movies/static/css/: style.css
movies/static/js/: main.js
movies/templates/movies/: movie_detail.html  movie_list.html
search/: search_index.json
site/: 404.html
templates/: base.html
templates/includes/: header.html  sidebar.html
